# src/main/java/org/example/flowtaskmanager/api/task/CreateSomedayTaskRequest.java
@@ -1,0 +1,6 @@
+package org.example.flowtaskmanager.api.task;
+
+public record CreateSomedayTaskRequest(
+	String title,
+	String description
+) {}
